# proto2

./: .gitignore  .vimrc
asset_dev/ase/enemy/: walk.ase
asset_dev/ase/ryu/: attack.ase  crouch.ase  idle_left.ase  idle_right.ase  jump.ase  walk.ase
asset_dev/tmx/: level1_1.tmx
assets/levels/: level1_1.json
assets/sprites/: enemy.json  ryu.json
scripts/: build  sprites
src/: CMakeLists.txt  app-config.h.in  proto2.cpp
src/control/: nes_input_manager.cpp  nes_input_manager.h
src/game/: game_data.h  game_manager.cpp  game_manager.h  level_data.h  level_screen.h  level_view.h  screen.cpp  screen.h  screen_view.h  title_screen.cpp  view.h
src/json/: json.h
src/level/: level_manager.cpp  level_manager.h
src/level/object/: enemy_object.cpp  enemy_object.h  player_object.cpp  player_object.h  sprite_object.h
src/loader/: aseprite_loader.cpp  aseprite_loader.h  tiled_loader.cpp  tiled_loader.h
src/ninjagaiden/: action.cpp  action.h  camera.cpp  camera.h  camera_manager.cpp  camera_manager.h  collision.cpp  collision.h  game.cpp  game.h  game_config.h  game_manager.cpp  game_manager.h  level.cpp  level.h  level_dispatcher.cpp  level_dispatcher.h  level_manager.cpp  level_manager.h  level_screen.cpp  level_screen.h  physics.cpp  physics.h  player.cpp  player.h  screen.h  screen_dispatcher.cpp  screen_dispatcher.h  screen_view.h  spec.h  title_screen.cpp  title_screen.h
src/ninjagaiden/objects/: enemy_object.cpp  enemy_object.h  player_object.cpp  player_object.h  sprite_object.h
src/sprite/: sprite.h  sprite_animator.cpp  sprite_animator.h
src/util/: geom.cpp  geom.h  log.cpp  log.h  output2stderr.cpp  output2stderr.h  timer.cpp  timer.h  util.cpp  util.h
src/video/: font_ttf.cpp  font_ttf.h  renderer_sdl.cpp  renderer_sdl.h  video_sdl.cpp  video_sdl.h
src/world/: action.h  collision.h  layers.h
